--- a/views/partials/backend/dropallTree.ejs
+++ b/views/partials/backend/dropallTree.ejs
@@ -1,15 +1,7 @@
-
 <% if(items.length){ 
     items.forEach(function(item){
     var space = "";
     for(var j = 1 ;j< level; j++ ){
             space = space + "--";
-    } %>
-        <option value="<%= item._id %>" <% if (item._id.equals(id_check)) {%> <%='selected'%> <% } %> ><%= space %><%= item.categoryName %></option>
-        <% if(item.children){ %>
-        <%- include('dropallTree', {items: item.children, level: level +1, id_check: id_check }) %> 
-        <% } %>
-
-   <% })
-} %>
-
+    } %><option value="<%= item._id %>"<% if (item._id.equals(id_check)) {%> <%='selected'%> <% } %>><%= space %><%= item.categoryName %></option>
+    <% if(item.children){ %><%- include('dropallTree', {items: item.children, level: level +1, id_check: id_check }) %><% } %><% }) } %>
