--- a/views/partials/backend/treeViewHtml.ejs
+++ b/views/partials/backend/treeViewHtml.ejs
@@ -12,7 +12,7 @@
     <% } else { %>
         <img src="/images/noimg.jpg" class="align-self-center img-thumbnail mr-3" alt="<%= item.categoryName %>" style="width:50px; height:50px;"> 
         <% } %></td>
-        <td><%= item.categoryType.typeName %></a></td>    
+        <td><%= item.categoryType.typeName %></td>    
     <td> <% if ( item.active) { %><span class="badge badge-success"><span class="ti-unlock"></span>&nbsp; Active</span>
         <% }else{%><span class="badge badge-danger"><span class="ti-lock"></span>&nbsp; Clock</span><%} %> </td>   
         <td> <% if ( item.home) { %><span class="badge badge-success"><span class="ti-check"></span>&nbsp; Home</span>
