--- a/views/partials/backend/aside.ejs
+++ b/views/partials/backend/aside.ejs
@@ -32,14 +32,14 @@
                         </li>                       
                     <% }) %>
                     <li><a href="/admin/user/list"> <i class="menu-icon fa fa-user"></i>Danh sách users </a></li>
-                    <li class="menu-item-has-children dropdown show">
+                    <!-- <li class="menu-item-has-children dropdown show">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true"> <i class="menu-icon fa fa-glass"></i>Pages</a>
                         <ul class="sub-menu children dropdown-menu show">
                             <li><i class="menu-icon fa fa-sign-in"></i><a href="page-login.html">Login</a></li>
                             <li><i class="menu-icon fa fa-sign-in"></i><a href="page-register.html">Register</a></li>
                             <li><i class="menu-icon fa fa-paper-plane"></i><a href="pages-forget.html">Forget Pass</a></li>
                         </ul>
-                    </li>
+                    </li> -->
                 </ul>
             </div><!-- /.navbar-collapse -->
         </nav>
