fix search all category and ony  Alias

--- a/views/Admin/categorys/addCategory.ejs
+++ b/views/Admin/categorys/addCategory.ejs
@@ -64,7 +64,7 @@
                     </div>
                     <div class="row form-group">
                         <div class="col col-md-3"><label class=" form-control-label">Tên Alias:</label></div>
-                        <div class="col-12 col-md-9 mserro"><input type="text" id="categoryKey" name="categoryKey" placeholder="Nhập tên Alias" class="form-control"  data-rule-required="true"></div>
+                        <div class="col-12 col-md-9 mserro"><input type="text" id="categoryKey" name="categoryKey" placeholder="Nhập tên Alias" class="form-control"  data-rule-required="true"><span id="keyspan" style = "color:red;"><span></div>
                     </div>                  
                     
                     <div class="row form-group">
@@ -121,7 +121,7 @@
                         </div>
                          <div class="row form-group">
                         <div class="col col-md-3">&nbsp;</div>
-                        <div class="col-12 col-md-9"><button type="submit" class="btn btn-primary btn-sm"><i class="fa fa-plus-square-o"></i> Thêm mới</button>
+                        <div class="col-12 col-md-9"><button type="submit" id="bntAdd" class="btn btn-primary btn-sm"><i class="fa fa-plus-square-o"></i> Thêm mới</button>
                         <a href="/admin/category/Index" class="btn btn-danger btn-sm"><i class="fa fa-reply"></i> Quay lại</a> </div>
                     </div> 
                     
@@ -223,6 +223,36 @@ jQuery(document).ready(function($) {
         $('#categoryKey').val(getSeoTitle(catetext));
         $('#metaTile').val(catetext);
     });
+    $("#categoryName").blur(function(){
+        var catetext = $(this).val();
+        $('#categoryKey').val(getSeoTitle(catetext));
+        $('#metaTile').val(catetext);
+    });
+
+    function checkExistCategoryKey(objId){
+        $("#"+objId).blur(function(){
+            $.ajax({
+                type: "GET",
+                async: true,        
+                url: "/api/category/checkExistCategoryKey/"+$("#categoryKey").val(),        
+                cache: false,
+                dataType: "json",
+                success: function (done) {                
+                    if(done.status){ 
+                        $("#keyspan").html(done.message);    
+                        $("#categoryKey").focus();
+                        $("#bntAdd").attr("disabled", true);
+                        return false;
+                    }else{
+                        $("#keyspan").html('');    
+                        $("#bntAdd").removeAttr("disabled");
+                    }
+                }
+            });
+        });
+    }
+    checkExistCategoryKey("categoryName");
+    checkExistCategoryKey("categoryKey");
 
     $('#categoryType').on('change', function() {
         $.ajax({
