--- a/views/Admin/products/add.ejs
+++ b/views/Admin/products/add.ejs
@@ -56,7 +56,7 @@
                     </div>
                     <div class="row form-group">
                         <div class="col col-md-3"><label class=" form-control-label">Tên Alias:</label></div>
-                        <div class="col-12 col-md-9 mserro"><input type="text" id="productKey" name="productKey" placeholder="Nhập tên Alias" class="form-control"  data-rule-required="true"></div>
+                        <div class="col-12 col-md-9 mserro"><input type="text" id="productKey" name="productKey" placeholder="Nhập tên Alias" class="form-control"  data-rule-required="true"><span id="keyspan" style = "color:red;"><span></div>
                     </div>                  
                     
                     <div class="row form-group">
@@ -126,7 +126,7 @@
                         </div>
                          <div class="row form-group">
                         <div class="col col-md-3">&nbsp;</div>
-                        <div class="col-12 col-md-9"><button type="submit" class="btn btn-primary btn-sm"><i class="fa fa-plus-square-o"></i> Thêm mới</button>
+                        <div class="col-12 col-md-9"><button type="submit" id="bntAdd" class="btn btn-primary btn-sm"><i class="fa fa-plus-square-o"></i> Thêm mới</button>
                         <a href="/admin/product/Index" class="btn btn-danger btn-sm"><i class="fa fa-reply"></i> Quay lại</a> </div>
                     </div> 
                     
@@ -212,7 +212,39 @@
             var productName = $(this).val();
             $('#productKey').val(getSeoTitle(productName));
             $('#metaTile').val(productName);
-        });    
+        });
+
+        $("#productName").blur(function(){
+            var catetext = $(this).val();
+            $('#productKey').val(getSeoTitle(catetext));
+            $('#metaTile').val(catetext);
+        });
+
+        function checkExistProductKey(objId){
+            $("#"+objId).blur(function(){
+                $.ajax({
+                    type: "GET",
+                    async: true,        
+                    url: "/api/product/checkExistProductKey/"+$("#productKey").val(),        
+                    cache: false,
+                    dataType: "json",
+                    success: function (done) {                
+                        if(done.status){ 
+                            $("#keyspan").html(done.message);    
+                            $("#productKey").focus();
+                            $("#bntAdd").attr("disabled", true);
+                            return false;
+                        }else{
+                            $("#keyspan").html('');    
+                            $("#bntAdd").removeAttr("disabled");
+                        }
+                    }
+                });
+            });
+        }
+        checkExistProductKey("productName");
+        checkExistProductKey("productKey");
+
    
     });
 </script>
