--- a/views/Admin/products/add.ejs
+++ b/views/Admin/products/add.ejs
@@ -154,13 +154,13 @@
 
         // uploader: {
         //    // url: 'https://xdsoft.net/jodit/connector/index.php?action=fileUpload'
-        //    url: '/api/uploads'
+        //    url: '/api/fileuploader/uploads'
         // },
         // filebrowser: {
         //     // buttons: ['list', 'tiles', 'sort'],
         //     ajax: {
         //         //url: 'https://xdsoft.net/jodit/connector/index.php'
-        //         url: '/filebrowse/api/files'
+        //         url: '/api/filebrowser/files'
         //     }
         // },
         commandToHotkeys: {
