--- a/views/partials/backend/treeViewHtml.ejs
+++ b/views/partials/backend/treeViewHtml.ejs
@@ -27,7 +27,8 @@
             <a class="btn btn-danger btn-sm" href="/admin/category/delete/<%= item._id %>?url=<%= linkUrl %>" onclick="return confirm('Bạn có muốn xóa không?')"><i class="fa fa-trash"></i>&nbsp; Xóa</a>
         </div>
     </td>
-</tr>  
+</tr>   <% if(item.children){ %>
  <%- include('treeViewHtml', {items: item.children, level: level + 1 }) %> 
+ <%}%>
     <% })
     } %>
